[package]
name = "fwl"
version = "0.2.1"
authors = ["Andrew Kushyk <akushyk799 at gmail.com>"]
edition = "2024"
description = "fwl - quick tool for restoring iptables rules"
license = "AGPL-3.0-or-later"
repository = "https://gitlab.com/git-user-cpp/jsdb"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
nix = { version = "0.30", features = ["user"] }
colored = "3"