[package]
name = "fwl"
version = "0.3.0"
authors = ["Andrew Kushyk <amnewman at duck.com>"]
edition = "2024"
description = "fwl - quick tool for restoring iptables rules"
license = "AGPL-3.0-or-later"
repository = "https://github.com/glcomtech/fwl"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
nix = { version = "0.30", features = ["user"] }
colored = "3"